4 - Posts (Twig / Doctrine / Session / Tests)

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -15,6 +15,7 @@ framework:
     default_locale:  %locale%
     session:
         auto_start:     true
+        lifetime:       1800
 
 # Twig Configuration
 twig:
