--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -21,6 +21,12 @@ framework:
 twig:
     debug:            %kernel.debug%
     strict_variables: %kernel.debug%
+    
+services:
+    webdevText.twig.extension:
+        class: Webdev\BlogBundle\Extension\WebdevTextExtension
+        tags:
+            - { name: twig.extension }
 
 # Assetic Configuration
 assetic:
