--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -5,6 +5,10 @@ framework:
     test: ~
     session:
         storage_id: session.storage.filesystem
+        
+doctrine:
+    dbal:
+        dbname: webdevsblog_test
 
 web_profiler:
     toolbar: false
