--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,8 @@
+WebdevAppBundle:
+    resource: "@WebdevAppBundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 WebdevBlogBundle:
     resource: "@WebdevBlogBundle/Controller/"
     type:     annotation
